Fixed 35 FindBugs errors